# ecommerce-rust-nextjs

./: .gitignore  Cargo.toml  Makefile  Readme.md  docker-compose.yaml
server/: .env.example  Cargo.toml  Dockerfile  Dockerfile copy  Dockerfile.prod  Makefile  compose.yaml  sea-orm.readme.md
server/db/entity/: Cargo.toml
server/db/entity/src/: address.rs  attribute.rs  cart.rs  category.rs  checkout.rs  lib.rs  login_session.rs  mod.rs  order.rs  otp.rs  prelude.rs  product.rs  sea_orm_active_enums.rs  user.rs
server/db/live_entity/src/: cart.rs  checkout.rs  login_session.rs  mod.rs  order.rs  prelude.rs  product.rs  sea_orm_active_enums.rs  user.rs
server/db/migration/: Cargo.toml
server/db/migration/src/: lib.rs  m20220101_000001_create_user.rs  m20240919_082400_create_login_session.rs  m20241016_050719_address.rs  m20241020_062623_attribute.rs  m20241021_041020_category.rs  m20241021_041026_product.rs  m20241112_052556_cart.rs  m20241114_074243_checkout.rs  m20241114_102614_order.rs  utils.rs
server/entity/: Cargo.toml
server/entity/src/: address.rs  login_session.rs  mod.rs  otp.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
server/migration/src/: config.rs  lib.rs  m20220101_000001_create_user.rs  m20240921_105640_create_otp.rs  m20241016_050719_address.rs  utils.rs
server/prev/: .dockerignore  Dockerfile  Dockerfile.prod  compose.yaml
server/routers/admin/: Cargo.toml
server/routers/admin/src/: hello.rs  lib.rs
server/routers/admin/src/auth/: mod.rs
server/routers/admin/src/auth/controllers/: login.rs
server/routers/admin/src/extra/: mod.rs
server/routers/admin/src/extra/controllers/: mod.rs  server_information.rs
server/routers/admin/src/product_management/: mod.rs
server/routers/admin/src/product_management/attributes/: dtos.rs  messages.rs  mod.rs  model.rs  schema.rs
server/routers/admin/src/product_management/attributes/controllers/: create_attribute.rs  delete_attribute.rs  get_attribute.rs  get_attributes.rs  mod.rs  update_attribute.rs  update_status.rs
server/routers/admin/src/product_management/categories/: messages.rs  mod.rs  schema.rs
server/routers/admin/src/product_management/categories/controllers/: create_category.rs  delete_category.rs  get_categories.rs  get_category.rs  mod.rs  update_category.rs
server/routers/admin/src/product_management/products/: dtos.rs  messages.rs  mod.rs  schema.rs
server/routers/admin/src/product_management/products/controllers/: create_product.rs  delete_product.rs  get_product.rs  get_products.rs  mod.rs  update_product.rs
server/routers/www/: Cargo.toml
server/routers/www/src/: hello.rs  lib.rs  messages.rs  models.rs  schemas.rs
server/routers/www/src/address/: messages.rs  mod.rs  utils.rs
server/routers/www/src/address/controllers/: create_address.rs  delete_address.rs  get_address.rs  get_addresses.rs  mark_default_address.rs  mod.rs  update_address.rs
server/routers/www/src/auth/: mod.rs  schema.rs  utils.rs
server/routers/www/src/auth/controllers/: continue_with_google.rs  forgot_password.rs  login.rs  logout.rs  mod.rs  register.rs  register_verify.rs  reset_password.rs
server/routers/www/src/cart/: messages.rs  mod.rs  schema.rs
server/routers/www/src/cart/controllers/: add_cart_item.rs  get_all_records.rs  get_cart_data.rs  mod.rs  place_order.rs  remove_cart_item.rs  update_cart_item_quantity.rs  update_quantity.rs
server/routers/www/src/checkout/: messages.rs  mod.rs  schema.rs
server/routers/www/src/checkout/controllers/: checkout_product.rs  get_checkout_data.rs  mod.rs  proceed_checkout.rs
server/routers/www/src/order/: messages.rs  mod.rs  schema.rs
server/routers/www/src/order/controllers/: get_order.rs  get_orders.rs  mod.rs
server/routers/www/src/product/: messages.rs  mod.rs
server/routers/www/src/product/controllers/: get_product.rs  get_products.rs  mod.rs
server/routers/www/src/profile/: messages.rs  mod.rs  schema.rs
server/routers/www/src/profile/controllers/: change_password.rs  get_profile.rs  logout_all.rs  mod.rs  update_profile.rs
server/routers/www/src/user/: mod.rs
server/routers/www/src/user/address/: mod.rs  schema.rs  utils.rs
server/routers/www/src/user/address/controllers/: create_address.rs  delete_address.rs  get_address.rs  get_addresses.rs  mark_default_address.rs  update_address.rs
server/routers/www/src/user/orders/: mod.rs
server/routers/www/src/user/profile/: mod.rs
server/routers/www/templates/: welcome.jinja
server/routers/www/templates/change-password/: success.jinja
server/routers/www/templates/layouts/: base.jinja
server/routers/www/templates/reset-password/: verification.jinja
server/scripts/: fix_entity.ts  package.json  pnpm-lock.yaml
server/src/: error.rs  main.rs
server/src/config/: mod.rs
server/src/extractors/: auth.rs  validator.rs
server/src/middlewares/: auth.rs
server/src/routes/: mod.rs  profile.rs
server/src/routes/admin/auth/: mod.rs
server/src/routes/admin/auth/controllers/: login.rs
server/src/routes/auth/: messages.rs  mod.rs  schema.rs  utils.rs
server/src/routes/auth/controllers/: forgot_password.rs  login.rs  logout.rs  mod.rs  register.rs  register_verify.rs  reset_password.rs
server/src/routes/profile/: mod.rs
server/src/routes/profile/controllers/: get_user.rs  mod.rs  update_profile.rs
server/src/routes/user/: mod.rs
server/src/routes/user/address/: mod.rs  schema.rs  utils.rs
server/src/routes/user/address/controllers/: create_address.rs  delete_address.rs  get_address.rs  get_addresses.rs  mark_default_address.rs  mod.rs  update_address.rs
server/src/routes/user/orders/controllers/: get_orders.rs
server/src/routes/user/profile/controllers/: get_profile.rs  update_profile.rs
server/src/services/: mailer.rs
server/src/utils/: cookie.rs  jwt.rs  number.rs
server/src/validator/: profile.rs
server/templates/: welcome.jinja
server/templates/login/: new-ip.jinja  verification.jinja
server/templates/register/: success.jinja  verification.jinja
server/templates/reset-password/: success.jinja  verification.jinja
(+489 files in other folders)
