[package]
name = "mcart"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  ".",
  "db/migration",
  "db/entity",
  "routers/www",
  "routers/admin",
  "packages/config",
  "packages/extractors",
  "packages/middlewares",
  "packages/services",
  "packages/utils",
]

[dependencies]
migration = { path = "./db/migration" }
entity = { path = "./db/entity" }
www = { path = "./routers/www" }
admin = { path = "./routers/admin" }
config = { path = "./packages/config" }
utils = { path = "./packages/utils" }
actix-extensible-rate-limit = { version = "0.4.0", features = ["redis"] }
actix-web = "4.9.0"
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
cuid2 = "0.1.3"
dotenvy = "0.15.7"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
lettre = "0.11.9"
log = "0.4.22"
redis = { version = "0.27.4", features = ["tokio-comp", "connection-manager"] }
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print", "with-json", "with-chrono"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { version = "5.1.1", features = ["actix_extras", "chrono", "decimal_float"] }
utoipa-scalar = { version = "0.2.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "8.0.1", features = ["actix-web"] }
utoipauto = "0.1.14"
validator = { version = "0.16.1", features = ["derive"] }
argon2 = "0.5.3"
askama = { version = "0.12.1" }
rand = "0.8.5"
actix-cors = "0.7.0"
