[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/mod.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "5.0.0", features = ["chrono"] }

[dependencies.sea-orm]
version = "1.0.1"
