[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
utoipa = { version = "5.0.0", features = ["chrono"] }
validator = { version = "0.16.1", features = ["derive"] }

[dependencies.sea-orm]
version = "1.0.1"
