[package]
name = "www"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
entity = { path = "../../db/entity" }
migration = { path = "../../db/migration" }
utils = { path = "../../packages/utils" }
services = { path = "../../packages/services" }
extractors = { path = "../../packages/extractors" }
middlewares = { path = "../../packages/middlewares" }
config = { path = "../../packages/config" }
askama = { version = "0.12.1" }
sea-orm = { version = "1.1.0", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "debug-print",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
thiserror = "2.0.1"
validator = { version = "0.16.1", features = ["derive"] }
cuid2 = "0.1.3"
chrono = { version = "0.4.38", features = ["serde"] }
utoipauto = "0.1.14"
utoipa = { version = "5.1.1", features = ["actix_extras", "chrono"] }
reqwest = { version = "0.12.9", features = ["json"] }
